<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IObber</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Say">Say:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Server">Server</string>
    <string name="Port">Port</string>

    <string name="hello_world">Hello world!</string>
    <string name="Password_cannot_be_empty">Password cannot be empty!</string>
    <string name="Wrong_password">Wrong password</string>
    <string name="User_not_exists">User not exists</string>
    <string name="Nick_cannot_be_empty">Nick cannot be empty!</string>
    <string name="Server_cannot_be_empty">Server_cannot_be_empty!</string>
    <string name="Port_cannot_be_empty">Port_cannot_be_empty!</string>

    <string name="Internet_not_found">Not connected</string>
    <string name="Server_not_found">Server not found</string>
    <string name="User_not_exsist">User does not exsist</string>
    <string name="Server_not_connect">Server not connected</string>
    <string name="SASLAuthentication">AuthenticationSASL</string>
    <string name="Login_cancelled">Login cancelled!</string>
    <string name="couldnt_log_in">Couldn\'t log in</string>
    <string name="Cannot_logout">Can not logout</string>
    <string name="new_conversation">New conversation</string>
    <string name="avatar">avatar</string>
    <string name="Login_not_valid">Login not valid</string>
    <string name="Please_log_in">Please log in</string>
    <string name="find">Find</string>
    <string name="contacts">Contacts</string>
    <string name="body_font_size">Body font size</string>
    <string name="set_font_size_in_body_field">Set font size in body field</string>
    <string name="set_font_size_in_author_field">Set font size in author field</string>
    <string name="set_font_size_in_date_field">Set font size in data field</string>
    <string name="date_font_size">Date font size</string>
    <string name="author_fotn_size">Author font size</string>
    <string name="settings">settings</string>
    <string name="spinner">spinner</string>
    <string name="choose_file">Choose file</string>
    <string name="send">Send</string>
    <string name="no_fie_chosen">No file chosen</string>
    <string name="send_file">Send file</string>

</resources>
