<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filetransfer_layout_filepath_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_fie_chosen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/filetransfer_layout_choose_file_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_file" />
    </LinearLayout>

    <Button
        android:id="@+id/filetransfer_layout_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:text="@string/send" />

</FrameLayout>